# common

./: .gitmodules  CMakeLists.txt  build_instructions.md  commonVersionString.cmake  conanfile.py  readme.md  rename.py  version_history.md
.github/workflows/: build.yml  package.yml
buildtools/profiles/: common-test-vs2022-debug  common-test-vs2022-release  common-test-vs2022-relwithdebinfo  gcc14
modules/: CMakeLists.txt
modules/common/: CMakeLists.txt
modules/common/include/common/: aligned_alloc.h  ansi_colors.h  enum_classes.h  is_detected.h  static_assert.h  type_traits.h
modules/common/src/: aligned_alloc.cpp
tests/common_test/: CMakeLists.txt
tests/common_test/include/common_test/: enum_classes.h  type_traits.h
tests/common_test/src/: enum_classes.cpp  main.cpp  type_traits.cpp
